@@ -4,6 +4,9 @@ module.exports = AlgoliaSearch;
 
 var errors = require('./errors');
 
+// We will always put the API KEY in the JSON body in case of too long API KEY
+var MAX_API_KEY_LENGTH = 500;
+
 /*
  * Algolia Search library initialization
  * https://www.algolia.com/
@@ -686,6 +689,14 @@ AlgoliaSearch.prototype = {
     var tries = 0;
     var usingFallback = false;
     var hasFallback = client._request.fallback && initialOpts.fallback;
+    var headers;
+
+    if (this.apiKey.length > MAX_API_KEY_LENGTH && initialOpts.body !== undefined && initialOpts.body.params !== undefined) {
+      initialOpts.body.apiKey = this.apiKey;
+      headers = this._computeRequestHeaders(false);
+    } else {
+      headers = this._computeRequestHeaders();
+    }
 
     if (initialOpts.body !== undefined) {
       body = safeJSONStringify(initialOpts.body);
@@ -736,6 +747,8 @@ AlgoliaSearch.prototype = {
         if (reqOpts.jsonBody) {
           reqOpts.body = safeJSONStringify(reqOpts.jsonBody);
         }
+        // re-compute headers, they could be omitting the API KEY
+        headers = client._computeRequestHeaders();
 
         reqOpts.timeout = client.requestTimeout * (tries + 1);
         client.hostIndex[initialOpts.hostType] = 0;
@@ -748,7 +761,7 @@ AlgoliaSearch.prototype = {
         body: reqOpts.body,
         jsonBody: reqOpts.jsonBody,
         method: reqOpts.method,
-        headers: client._computeRequestHeaders(),
+        headers: headers,
         timeout: reqOpts.timeout,
         debug: requestDebug
       };
@@ -908,14 +921,21 @@ AlgoliaSearch.prototype = {
     return params;
   },
 
-  _computeRequestHeaders: function() {
+  _computeRequestHeaders: function(withAPIKey) {
     var forEach = require('lodash/collection/forEach');
 
     var requestHeaders = {
-      'x-algolia-api-key': this.apiKey,
-      'x-algolia-application-id': this.applicationID,
-      'x-algolia-agent': this._ua
+      'x-algolia-agent': this._ua,
+      'x-algolia-application-id': this.applicationID
     };
+
+    // browser will inline headers in the url, node.js will use http headers
+    // but in some situations, the API KEY will be too long (big secured API keys)
+    // so if the request is a POST and the KEY is very long, we will be asked to not put
+    // it into headers but in the JSON body
+    if (withAPIKey !== false) {
+      requestHeaders['x-algolia-api-key'] = this.apiKey;
+    }
 
     if (this.userToken) {
       requestHeaders['x-algolia-usertoken'] = this.userToken;
